--- a/code/data_collation/04_Generating Complete Networks.ipynb
+++ b/code/data_collation/04_Generating Complete Networks.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\falco\\anaconda3\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\falco\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.NOIJJG62EMASZI6NYURL6JBKM4EVBGM7.gfortran-win_amd64.dll\n",
+      "C:\\Users\\falco\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Running basic code:\n",
     "Importing packages, setting working directory, \n",
@@ -119,6 +130,24 @@
     "df = pd.merge(df, IUCN[['ScientificName', 'Order']], on= 'ScientificName', how='left')\n",
     "df['PubMed_Search'].fillna(1, inplace = True)\n",
     "df['PubMed_Search'] = df['PubMed_Search']+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.to_csv(data_path + '\\species_hp_updated.csv')"
    ]
   },
   {
